# wit-bindgen-yowl

./: .gitignore  Cargo.toml  wasi_snapshot_preview1.reactor.wasm
crates/c/src/: lib.rs
crates/core/src/: lib.rs
crates/csharp/: Cargo.toml
crates/csharp/src/: lib.rs
crates/csharp/tests/: codegen.rs
testing-csharp/: Exports.cs  ExportsInterop.cs  Imports.cs  ImportsInterop.cs  TheWorld.cs  the_world.c  the_world.h
testing-csharp/WitSourceGen/: WitSourceGen.sln
testing-csharp/WitSourceGen/WitSourceGen/: SourceGeneratorContextExtensions.cs  WitSourceGen.csproj  WitSourceGenerator.cs
testing-csharp/WitSourceGen/WitSourceGen/Properties/: launchSettings.json
testing-csharp/WitSourceGen/WitSourceGenGuest/: Program.cs  WitSourceGenGuest.csproj
tests/: README.md
tests/codegen/: strings.wit
tests/runtime/: flavorful.rs  lists.rs  main.rs  many_arguments.rs  numbers.rs  ownership.rs  records.rs  smoke.rs  strings.rs  variants.rs
tests/runtime/many_arguments/: wasm.cs
tests/runtime/numbers/: wasm.cs
tests/runtime/strings/: wasm.cs  world.wit
