[package]
name = "wit-bindgen-cli"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.12.0"
edition = { workspace = true }
repository = 'https://github.com/bytecodealliance/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
CLI tool to generate bindings for WIT documents and the component model.
"""

[workspace]
members = ["crates/test-rust-wasm", "crates/wasi_snapshot_preview1"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.72"
bitflags = "2.3.3"
heck = { version = "0.4", features = ["unicode"] }
pulldown-cmark = { version = "0.9", default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
indexmap = "2.0.0"
async-trait = "0.1.73"

wasm-encoder = { version="0.33.2", path = "../wasm-tools/crates/wasm-encoder" }
wasm-metadata = {version="0.10.6", path = "../wasm-tools/crates/wasm-metadata" }
wit-parser = {version="0.11.3", path = "../wasm-tools/crates/wit-parser" }
wit-component = { version="0.14.4", path = "../wasm-tools/crates/wit-component" }
wasmtime_wasi = "11.0.1"

wit-bindgen-csharp = { path = 'crates/csharp', version = '0.10.0' }
wit-bindgen-core = { path = 'crates/core', version = '0.12.0' }
wit-bindgen-c = { path = 'crates/c', version = '0.12.0' }
wit-bindgen-rust = { path = "crates/rust", version = "0.12.0" }
wit-bindgen-teavm-java = { path = 'crates/teavm-java', version = '0.12.0' }
wit-bindgen-go = { path = 'crates/go', version = '0.12.0' }
wit-bindgen-markdown = { path = 'crates/markdown', version = '0.12.0' }
wit-bindgen = { path = 'crates/guest-rust', version = '0.12.0', default-features = false }
wit-bindgen-rust-macro-shared = { path = 'crates/rust-macro-shared', version = '0.3.0' }

[[bin]]
name = "wit-bindgen"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-c = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-csharp = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-markdown = { workspace = true, features = [
  'clap',
], optional = true }
wit-bindgen-teavm-java = { workspace = true, features = [
  'clap',
], optional = true }
wit-bindgen-go = { workspace = true, features = ['clap'], optional = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
wasmtime-wasi = { workdpace = true }
async-trait = "0.1.73"

[features]
default = [
  'c',
  'rust',
  'markdown',
  'teavm-java',
  'go',
  'csharp'
]
c = ['dep:wit-bindgen-c']
csharp = ['dep:wit-bindgen-csharp']
rust = ['dep:wit-bindgen-rust']
markdown = ['dep:wit-bindgen-markdown']
teavm-java = ['dep:wit-bindgen-teavm-java']
go = ['dep:wit-bindgen-go']

[dev-dependencies]
heck = { workspace = true }
wasmtime = { version = "13", features = ['component-model'] }
test-artifacts = { path = 'crates/test-rust-wasm/artifacts' }
wit-parser = { workspace = true }
tokio = { version = "1.28.1", features = ["full"] }
async-trait = { workspace = true }